--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ body {font-size:16px;}
   
   <!-- Designers -->
   <div class="w3-container" id="designers" style="margin-top:75px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>More Pre Debut Shoots</b></h1>
+    <h1 class="w3-xxxlarge w3-text-red"><b>Venue</b></h1>
     <hr style="width:50px;border:5px solid #91119f" class="w3-round">
     <p>The best team in the world.</p>
     <p>One Café and Events Place Inc. A place where it aims to be the premier provider of event venues, catering, food service needs, party decors, mobile lights and sounds, photo and video coverage, led wall setup of various companies, organizations, and individuals. Boasting of collective experiences in the event industry, One Café and Events Place Inc.  promises to meet and exceed the demands of our prospective clients. As of today, One Café and Events Place Inc. has three active venues
@@ -205,7 +205,7 @@ body {font-size:16px;}
   </div>
 
  <div class="w3-container" id="packages" style="margin-top:75px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Packages.</b></h1>
+    <h1 class="w3-xxxlarge w3-text-red"><b>More Pre Debut Shots.</b></h1>
     <hr style="width:50px;border:5px solid #91119f" class="w3-round">
 <br>
   <div class="slideshow-container">
